# rust-subprocess-tasks

./: Cargo.toml  command.yaml
src/: main.rs
