[package]
name = "rust-subprocess-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
subprocess = "0.2.9"
bat = "0.23.0"